test/errors/unsupported_binary_operator_null.correct
error: unsupported_binary_operator_null.li:1:14: unsupported operation between null and number
│ println(null * 2);
│         ~~~~~~~~
│              ^
